deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nibiru-node
  namespace: nibiru
spec:
  selector:
    matchLabels:
      app: nibiru-node 
  replicas: 1 
  minReadySeconds: 10 
  template:
    metadata:
      labels:
        app: nibiru-node 
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: nibiru-node 
        image: ghcr.io/nibiruchain/nibiru:latest
        securityContext:
            runAsUser: 0
        command: ["/usr/local/bin/nibid","start"]
        args:
          - --home=/data
          - --rpc.unsafe 
          - --rpc.laddr=tcp://0.0.0.0:26657
          - --rpc.grpc_laddr=tcp://0.0.0.0:26658
        ports:
        - containerPort: 26657
          name: rpc-port
        - containerPort: 26658
          name: grpc-port
        resources:
          limits:
                memory: 6G
                cpu: 4
          requests:
                memory: 6G
                cpu: 1
        readinessProbe:
          tcpSocket:
            port: 26657
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 26657
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: chain-data
          mountPath: /data 
      volumes:
        - name: chain-data
          persistentVolumeClaim:
            claimName: nibiru-node-pvc
