statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nibiru-node
  namespace: nibiru
spec:
  selector:
    matchLabels:
      app: nibiru-node 
  serviceName: "nibiru-node"
  
  replicas: 1 
  minReadySeconds: 10 
  template:
    metadata:
      labels:
        app: nibiru-node 
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: nibiru-node 
        image: ghcr.io/nibiruchain/nibiru:latest
        command: ["/usr/local/bin/nibid","start"]
        args:
          - --home /data/.nibid
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: chain-data
          mountPath: /data 
      volumes:
        - name: chain-data
          persistentVolumeClaim:
            claimName: nibiru-node-pvc
