ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nibiru-rpc
  namespace: nibiru
  annotations:
    kubesphere.io/creator: admin
spec:
  ingressClassName: traefik
  rules:
    - host: nibiru-rpc.moveworld.fans
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: nibiru-svc
                port:
                  number: 30001
